# IITH-Projects

./: .gitignore  LICENSE  README.md
MA4240/: .gitignore  README.md  Survey on Mess Food Usage by IITH Students.csv  main.tex  main_report.tex  stats_presentation.tex
MA4240/notebooks/: AppliedStats_Figs.ipynb
MA4240/src/: plots.py
MotionGPT/: README.md
adversaries-in-ir/: .gitmodules  README.md
adversaries-in-ir/classifier/: Claasifier-Keras.ipynb  preprocess.py  (+3 more)
bosch-age-gender/: LICENSE  README.md  capture.py  requirements.txt  test.py  test_inter.py  tmp.py
dbms2/: .gitignore  README.md  header.h  parser.cpp
devrev-tools-rag/: README.md
digifab/: README.md
far-field-speaker-recognition/: README.md
learning-management-system/: LICENSE  README.md
lucas/: README.md
movie-review-system/: .gitignore  LICENSE  README.md  requirements.txt
movie-review-system/backend/: README.md  pyproject.toml  routes.txt
movie-review-system/backend/backend/: .gitignore  auth.py  env.example  main.py  queries.sql  schema.sql  utils.py
movie-review-system/backend/backend/ML/: Summarizer.py  model.py  utils.py
movie-review-system/backend/init_db/: 01-init_db.py  02-init_db.sql  README
mphasis-quantum-flight-scheduling/: .gitignore  README.md  dqm_constraints.py  final.ipynb  lp.py
neuro-GMM/: README.md  requirements.txt
neuroai/: README.md
quantum-spherical-kmeans/: README.md  distance_metric.py  main.py  qMeans.ipynb  skmeans.py
quantum-vrp/: README.md
segmentation-lidar/: README.md
single-HDR/: README.md
student-message-board/: README.md
(+94448 files in other folders)
