[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kst164 <kartheek@tammana.org>"]
readme = "README.md"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
google-auth = "^2.22.0"
aiosql = "^9.0"
requests = "^2.31.0"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
transformers = "^4.33.3"
numpy = "^1.26.0"
scipy = "^1.11.3"
torch = {version = "^1.10.0", source = "pytorch-cpu"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
